# chat-ai

./: README.md  package-lock.json  package.json
.github/workflows/: release.yml  rust.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  frequency.json  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: cache.rs  chat.rs  handlers.rs  lib.rs  main.rs  models.rs
src-tauri/tests/: cache_test.rs  chat_test.rs  handlers_test.rs  integration_test.rs  models_test.rs
