[package]
name = "chat-ai"
version = "0.0.1"
description = "A Ai Chat App"
authors = ["bleedingfight"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "chat_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.5", features = [] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
env_logger = "0.11"
log = "0.4.25"
futures-util = "0.3"
lazy_static = "1.5.0"
aes-gcm = "0.10.3"
base64 = "0.22.1"
rand = "0.9"
